# DebFix

chisel_debloated/chisel_10_fixes/: README.md
chisel_debloated/chisel_10_fixes/benchmark/bzip2-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_10_fixes/benchmark/grep-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_10_fixes/benchmark/rm-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_10_fixes/benchmark/sort-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_10_fixes/benchmark/tar-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_10_fixes/benchmark/tcas-argv-fuzz/: getprog_cov.sh  run_cov.sh
chisel_debloated/chisel_10_fixes/benchmark/totinfo-input-fuzz/: run_cov.sh
chisel_debloated/chisel_15_fixes/: setenv  test-base.sh
chisel_debloated/chisel_15_fixes/benchmark/: crash_info_template.txt
chisel_debloated/chisel_15_fixes/benchmark/bzip2-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/chown-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/date-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/grep-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/grep-input-fuzz/: compile.sh
chisel_debloated/chisel_15_fixes/benchmark/gzip-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/rm-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/schedule-input-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/sort-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/tar-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_15_fixes/benchmark/tar-input-fuzz/: run_cov.sh
chisel_debloated/chisel_15_fixes/benchmark/uniq-input-fuzz/: run_cov.sh
chisel_debloated/chisel_1_fix/benchmark/bzip2-argv-fuzz/: auto_repair.sh  run_cov.sh
chisel_debloated/chisel_1_fix/benchmark/chown-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_1_fix/benchmark/date-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_1_fix/benchmark/grep-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_1_fix/benchmark/gzip-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_1_fix/benchmark/rm-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_1_fix/benchmark/schedule-input-fuzz/: run_cov.sh
chisel_debloated/chisel_1_fix/benchmark/sort-argv-fuzz/: auto_repair.sh  compile.sh
chisel_debloated/chisel_1_fix/benchmark/tar-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_20_fixes/benchmark/bzip2-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_20_fixes/benchmark/chown-argv-fuzz/: auto_repair.sh
chisel_debloated/chisel_5_fixes/benchmark/: mk_wkdir.sh
chisel_debloated/chisel_5_fixes/benchmark/grep-input-fuzz/: run_cov.sh
experiment/chisel_debloated/chisel_10_fixes/: run_all.sh
tool/: README.md  run.sh  run_baseline.sh  setenv  validate.sh
tool/find-relevant/: CMakeLists.txt  CustomASTConsumer.cpp  CustomASTConsumer.h  CustomFrontendAction.cpp  CustomFrontendAction.h  CustomVisitor.cpp  CustomVisitor.h  FindRelevant.cpp
tool/pre-slicing/: .gitignore  README.md  get_debloated_lines.sh  run.sh  run_cov.sh  setup.sh
tool/pre-slicing/aligner/: align-source-codes.py
tool/pre-slicing/analyzer/: pre-slicing-analyze.py
tool/pre-slicing/instrumenter/: .clang-format  CMakeLists.txt  make.sh
tool/pre-slicing/instrumenter/include/: GlobalReduction.h  LocalReduction.h  Reduction.h
tool/pre-slicing/instrumenter/python/: add-back.py
tool/pre-slicing/instrumenter/src/fixer/: GlobalReduction.cpp  LocalReduction.cpp  Main.cpp  Reduction.cpp
(+18517 files in other folders)
